<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorFragment">


    <HorizontalScrollView
        android:id="@+id/history_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/history_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            tools:text="32+25+36" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/calculations_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_scroller">

        <TextView
            android:id="@+id/calculations_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:text="32+25+36" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculations_scroller" />

    <Button
        android:id="@+id/all_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/all_clear"
        app:layout_constraintStart_toEndOf="@id/clear_button"
        app:layout_constraintTop_toBottomOf="@id/calculations_scroller" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="152dp"
        android:text="@string/delete"
        app:layout_constraintStart_toEndOf="@id/all_clear_button"
        app:layout_constraintTop_toBottomOf="@id/calculations_scroller" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/plus"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/calculations_scroller" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear_button" />


    <Button
        android:id="@+id/eight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@id/seven_button"
        app:layout_constraintTop_toBottomOf="@id/all_clear_button" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@id/eight_button"
        app:layout_constraintTop_toBottomOf="@id/delete_button" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/minus"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/nine_button"
        app:layout_constraintTop_toBottomOf="@+id/plus_button" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seven_button" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@id/four_button"
        app:layout_constraintTop_toBottomOf="@id/eight_button" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@id/five_button"
        app:layout_constraintTop_toBottomOf="@id/nine_button" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/multiplication"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/six_button"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/four_button" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@id/one_button"
        app:layout_constraintTop_toBottomOf="@id/five_button" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@id/two_button"
        app:layout_constraintTop_toBottomOf="@id/six_button" />

    <Button
        android:id="@+id/division_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/division"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/three_button"
        app:layout_constraintTop_toBottomOf="@+id/multiply_button" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@id/clear_button"
        app:layout_constraintTop_toBottomOf="@id/two_button" />

    <Button
        android:id="@+id/dot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dot"
        app:layout_constraintStart_toEndOf="@id/zero_button"
        app:layout_constraintTop_toBottomOf="@id/three_button" />

    <Button
        android:id="@+id/equal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/equal"
        app:layout_constraintStart_toEndOf="@+id/dot_button"
        app:layout_constraintTop_toBottomOf="@id/division_button" />

    <Button
        android:id="@+id/currency_converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currency_converter"
        app:layout_constraintEnd_toEndOf="@+id/dot_button"
        app:layout_constraintStart_toStartOf="@+id/zero_button"
        app:layout_constraintTop_toBottomOf="@id/equal_button" />

</androidx.constraintlayout.widget.ConstraintLayout>